--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,18 @@ buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
     }
+    repositories{
+        maven { url 'https://jitpack.io' }
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+}
+
+allprojects {
+    repositories{
+        maven { url 'https://jitpack.io' }
+    }
 }
